--- a/src/style.css
+++ b/src/style.css
@@ -42,6 +42,7 @@
   background-color: var(--dl-color-gray-white);
 }
 .input {
+  color: var(--dl-color-primary-content);
   cursor: auto;
   padding: 0.5rem 1rem;
   font-size: 12px;
@@ -270,6 +271,12 @@
   width: 14px;
   height: 14px;
 }
+.visibility_70 {
+  opacity: 0.7;
+}
+.visibility_60 {
+  opacity: 0.5;
+}
 .Heading {
   font-size: 32px;
   font-family: Inter;
@@ -279,11 +286,11 @@
   text-decoration: none;
 }
 .Content {
-  font-size: 12px;
+  font-size: 11px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen","Ubuntu", "Cantarell", "Fira Sans","Droid Sans", "Helvetica Neue", sans-serif;
   font-weight: 400;
   line-height: 1.3;
-  letter-spacing: 1.3;
+  letter-spacing: 1.5;
   text-transform: none;
   text-decoration: none;
 }
