Commit from TeleportHQ

--- a/src/components/login-component.css
+++ b/src/components/login-component.css
@@ -1,8 +1,15 @@
 .login-component-login-component {
+  gap: var(--dl-space-space-g20);
   width: 369px;
+  height: 562px;
   display: flex;
-  position: relative;
-  box-shadow: 0px 0px 10px 0px rgba(212, 212, 212, 0.58);
+  align-items: center;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+.login-component-container {
+  width: 100%;
+  display: flex;
   align-items: center;
   padding-top: var(--dl-space-space-p20);
   border-color: var(--dl-color-gray-border);
@@ -12,7 +19,7 @@
   justify-content: center;
   background-color: var(--dl-color-gray-white);
 }
-.login-component-container {
+.login-component-container01 {
   gap: var(--dl-space-space-g20);
   width: 100%;
   display: flex;
@@ -23,7 +30,7 @@
   padding-bottom: var(--dl-space-space-p20);
   justify-content: flex-start;
 }
-.login-component-container01 {
+.login-component-container02 {
   gap: var(--dl-space-space-g10);
   color: var(--dl-color-gray-white);
   display: flex;
@@ -38,7 +45,7 @@
   padding-bottom: var(--dl-space-space-p5);
   justify-content: center;
 }
-.login-component-container02 {
+.login-component-container03 {
   gap: var(--dl-space-space-g5);
   display: flex;
   align-items: center;
@@ -58,7 +65,7 @@
   font-style: normal;
   font-weight: 700;
 }
-.login-component-container03 {
+.login-component-container04 {
   gap: var(--dl-space-space-g40);
   width: 100%;
   display: flex;
@@ -70,14 +77,14 @@
   padding-bottom: var(--dl-space-space-p20);
   justify-content: center;
 }
-.login-component-container04 {
+.login-component-container05 {
   gap: var(--dl-space-space-g20);
   width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
-.login-component-container05 {
+.login-component-container06 {
   gap: var(--dl-space-space-g10);
   flex: 0 0 auto;
   width: 100%;
@@ -88,7 +95,7 @@
 .login-component-text10 {
   font-size: 10px;
 }
-.login-component-container06 {
+.login-component-container07 {
   width: 100%;
   height: 45px;
   display: flex;
@@ -102,7 +109,7 @@
 .login-component-textinput {
   width: 100%;
 }
-.login-component-container07 {
+.login-component-container08 {
   gap: var(--dl-space-space-g10);
   flex: 0 0 auto;
   width: 100%;
@@ -113,7 +120,7 @@
 .login-component-text11 {
   font-size: 10px;
 }
-.login-component-container08 {
+.login-component-container09 {
   width: 100%;
   height: 45px;
   display: flex;
@@ -127,7 +134,7 @@
 .login-component-textinput1 {
   width: 100%;
 }
-.login-component-container09 {
+.login-component-container10 {
   gap: var(--dl-space-space-g20);
   width: 100%;
   display: flex;
@@ -135,19 +142,19 @@
   flex-direction: column;
   justify-content: center;
 }
-.login-component-container10 {
+.login-component-container11 {
   flex: 0 0 auto;
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
-.login-component-container11 {
+.login-component-container12 {
   gap: var(--dl-space-space-g10);
   display: flex;
   align-items: center;
 }
-.login-component-container12 {
+.login-component-container13 {
   gap: var(--dl-space-space-g10);
   fill: var(--dl-color-gray-white);
   flex: 0 0 auto;
@@ -166,13 +173,13 @@
   flex-direction: column;
   justify-content: center;
 }
-.login-component-container12:hover {
+.login-component-container13:hover {
   background-color: rgba(104, 64, 165, 0.5);
 }
 .login-component-icon {
   z-index: 100;
 }
-.login-component-container13 {
+.login-component-container14 {
   width: 20px;
   height: 20px;
   display: flex;
@@ -199,49 +206,6 @@
   font-style: normal;
   font-weight: 400;
 }
-.login-component-container14 {
-  gap: var(--dl-space-space-g5);
-  flex: 0 0 auto;
-  width: 100%;
-  display: flex;
-  align-items: flex-start;
-  padding-top: var(--dl-space-space-p10);
-  border-color: var(--dl-color-gray-border);
-  border-width: 1px;
-  padding-left: var(--dl-space-space-p20);
-  border-radius: var(--dl-radius-radius-r8);
-  padding-right: var(--dl-space-space-p20);
-  flex-direction: column;
-  padding-bottom: var(--dl-space-space-p10);
-  background-color: var(--dl-color-background-bg1);
-}
-.login-component-text16 {
-  font-size: 10px;
-  font-weight: 300;
-  line-height: 1.5;
-}
-.login-component-text17 {
-  color: var(--dl-color-danger-300);
-  font-weight: 700;
-}
-.login-component-text18 {
-  font-style: normal;
-}
-.login-component-text19 {
-  font-style: normal;
-}
-.login-component-text20 {
-  font-style: normal;
-}
-.login-component-text21 {
-  font-style: normal;
-}
-.login-component-text22 {
-  font-style: normal;
-}
-.login-component-text23 {
-  font-style: normal;
-}
 .login-component-container15 {
   width: 100%;
   display: flex;
@@ -267,4 +231,69 @@
   border-radius: var(--dl-radius-radius-r8);
   padding-right: var(--dl-space-space-p20);
   justify-content: center;
+}
+.login-component-container17 {
+  gap: var(--dl-space-space-g10);
+  fill: var(--dl-color-gray-white);
+  color: var(--dl-color-gray-white);
+  width: 100%;
+  cursor: pointer;
+  height: 40px;
+  display: flex;
+  font-size: 12px;
+  align-items: center;
+  border-color: rgba(230, 230, 230, 0.5);
+  border-width: 1px;
+  padding-left: var(--dl-space-space-p20);
+  border-radius: var(--dl-radius-radius-r8);
+  padding-right: var(--dl-space-space-p20);
+  justify-content: center;
+  background-color: var(--dl-color-background-bg1);
+}
+.login-component-lottie-node {
+  width: 89px;
+  height: 14px;
+}
+.login-component-container18 {
+  gap: var(--dl-space-space-g5);
+  flex: 0 0 auto;
+  width: 100%;
+  display: flex;
+  align-items: flex-start;
+  padding-top: var(--dl-space-space-p10);
+  border-color: var(--dl-color-gray-border);
+  border-width: 1px;
+  padding-left: var(--dl-space-space-p20);
+  border-radius: var(--dl-radius-radius-r8);
+  padding-right: var(--dl-space-space-p20);
+  flex-direction: column;
+  padding-bottom: var(--dl-space-space-p10);
+  background-color: var(--dl-color-background-bg1);
+}
+.login-component-text17 {
+  font-size: 10px;
+  font-weight: 300;
+  line-height: 1.5;
+}
+.login-component-text18 {
+  color: var(--dl-color-danger-300);
+  font-weight: 700;
+}
+.login-component-text19 {
+  font-style: normal;
+}
+.login-component-text22 {
+  font-style: normal;
+}
+.login-component-text25 {
+  font-style: normal;
+}
+.login-component-text26 {
+  font-style: normal;
+}
+.login-component-text29 {
+  font-style: normal;
+}
+.login-component-text30 {
+  font-style: normal;
 }
