--- a/src/components/list-component.css
+++ b/src/components/list-component.css
@@ -1,6 +1,6 @@
 .list-component-list-overview {
-  flex: 1;
   width: 100%;
+  height: 100%;
   display: flex;
   position: relative;
   align-items: flex-start;
@@ -739,14 +739,13 @@
 }
 .list-component-container10 {
   width: 100%;
-  height: 500px;
   display: flex;
+  overflow: hidden;
   align-items: flex-start;
   flex-direction: column;
 }
 .list-component-menu0 {
   width: 100%;
-  height: 280px;
   display: flex;
   overflow: scroll;
   align-items: flex-start;
@@ -755,7 +754,6 @@
 }
 .list-component-menu1 {
   width: 100%;
-  height: 280px;
   display: flex;
   overflow: scroll;
   align-items: flex-start;
@@ -764,7 +762,6 @@
 }
 .list-component-menu2 {
   width: 100%;
-  height: 280px;
   display: flex;
   overflow: scroll;
   align-items: flex-start;
