--- a/src/components/list-component.css
+++ b/src/components/list-component.css
@@ -744,6 +744,84 @@
   align-items: flex-start;
   flex-direction: column;
 }
+.list-component-container11 {
+  flex: 0 0 auto;
+  width: 100%;
+  height: 40px;
+  display: flex;
+  z-index: 100;
+  font-size: 10px;
+  align-items: center;
+  font-weight: 700;
+  padding-left: var(--dl-space-space-p20);
+  background-color: rgba(255, 255, 255, 0.5);
+}
+.list-component-container12 {
+  flex: 1;
+  height: auto;
+  display: flex;
+  opacity: 0.7;
+  align-items: center;
+  padding-top: var(--dl-space-space-p5);
+  padding-bottom: var(--dl-space-space-p5);
+}
+.list-component-container13 {
+  flex: 0.5;
+  height: auto;
+  display: flex;
+  opacity: 0.7;
+  align-items: center;
+  padding-top: var(--dl-space-space-p5);
+  padding-left: var(--dl-space-space-p10);
+  padding-bottom: var(--dl-space-space-p5);
+}
+.list-component-container14 {
+  flex: 0.3;
+  height: auto;
+  display: flex;
+  opacity: 0.7;
+  align-items: center;
+  padding-top: var(--dl-space-space-p5);
+  padding-left: var(--dl-space-space-p10);
+  padding-bottom: var(--dl-space-space-p5);
+}
+.list-component-container15 {
+  flex: 0 0 auto;
+  width: 140px;
+  height: auto;
+  display: flex;
+  opacity: 0.7;
+  align-items: center;
+  padding-top: var(--dl-space-space-p5);
+  padding-left: var(--dl-space-space-p10);
+  padding-bottom: var(--dl-space-space-p5);
+}
+.list-component-container16 {
+  flex: 0 0 auto;
+  width: 80px;
+  height: auto;
+  display: flex;
+  opacity: 0.7;
+  align-items: center;
+  padding-top: var(--dl-space-space-p5);
+  padding-left: var(--dl-space-space-p10);
+  padding-right: var(--dl-space-space-p10);
+  padding-bottom: var(--dl-space-space-p5);
+  justify-content: flex-end;
+}
+.list-component-container17 {
+  flex: 0 0 auto;
+  width: 220px;
+  height: auto;
+  display: flex;
+  opacity: 0.7;
+  align-items: center;
+  padding-top: var(--dl-space-space-p5);
+  padding-left: 0px;
+  padding-right: var(--dl-space-space-p20);
+  padding-bottom: var(--dl-space-space-p5);
+  justify-content: flex-end;
+}
 .list-component-menu0 {
   width: 100%;
   display: flex;
